fix form alignment

--- a/src/core/_Form.scss
+++ b/src/core/_Form.scss
@@ -62,9 +62,3 @@ input[type="checkbox"],
 input[type="radio"] {
   display: inline;
 }
-
-.label-inline {
-  display: inline-block;
-  font-weight: normal;
-  margin-left: 0.5rem;
-}
