--- a/src/extensions/mg-check.scss
+++ b/src/extensions/mg-check.scss
@@ -3,6 +3,7 @@
   position: relative;
   padding-left: 1.8em;
   margin-right: 1.1em;
+  margin-bottom: 1.5rem;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
