--- a/src/extensions/mg-switch.scss
+++ b/src/extensions/mg-switch.scss
@@ -2,10 +2,11 @@
 .mg-switch {
   position: relative;
   display: inline-block;
-  width: 3.7em;
   height: 2em;
   margin-left: 0.5em;
   margin-right: 0.5em;
+  margin-bottom: 1.5rem;
+  width: 3.7em;
 }
 
 /* Hide default HTML checkbox */
