--- a/src/mg-variables.scss
+++ b/src/mg-variables.scss
@@ -14,7 +14,6 @@
   --mg-color-blue: #007bff;
   --mg-color-green: #28a745;
   --mg-control-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 0 3px 4px rgba(0, 0, 0, 0.15);
-  --mg-gutter-size: 0.5rem;
 }
 .mg-theme-inverted {
   --mg-color-initial: #302f2f !important;
@@ -45,7 +44,7 @@ $color-danger: $color-red;
 $color-warning: $color-orange;
 $color-success: $color-green;
 $grid__columns: 12;
-$grid__gutter: 0;
+$grid__gutter: 0.5rem;
 
 $name--X: mg-x;
 $name--S: mg-s;
